Revision history for Music-Cadence

{{$NEXT}}
    - Remove %notes & just use the @scale indexes.

0.0105 2019-08-11 08:12:49
    - Fix the resolution chord of the desceptive cadence.

0.0104 2019-08-11 08:02:59
    - Add crucial disclaimer.

0.0103 2019-08-11 07:42:42
    - Fix documentation error.
    - Change argument name from variation to leading.

0.0102 2019-08-11 02:31:29
    - Fix variation default.

0.0101 2019-08-11 02:15:45
    - Fix documentation.

0.0100 2019-08-11 01:55:35
    - Add working code!
    - Mint by Dist:Zilla.