@@ -2,6 +2,7 @@ Revision history for Music-Cadence
 
 {{$NEXT}}
     - Remove %notes & just use the @scale indexes.
+    - Replace imperfect with half.
 
 0.0105 2019-08-11 08:12:49
     - Fix the resolution chord of the desceptive cadence.
